--- a/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -9,7 +9,6 @@
     <title>Manager</title>
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
           name="viewport" />
-    <link rel="icon" href="@Url.Content("~/AdminAssets/img/kaiadmin/favicon.ico")" type="image/x-icon" />
 
     <!-- Fonts and icons -->
     <script src="@Url.Content("~/AdminAssets/js/plugin/webfont/webfont.min.js")"></script>
@@ -35,6 +34,7 @@
     <link rel="stylesheet" href="@Url.Content("~/AdminAssets/css/bootstrap.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/AdminAssets/css/plugins.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/AdminAssets/css/kaiadmin.min.css")" />
+    <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link rel="stylesheet" href="@Url.Content("~/AdminAssets/css/demo.css")" />
@@ -46,12 +46,8 @@
             <div class="sidebar-logo">
                 <!-- Logo Header -->
                 <div class="logo-header" data-background-color="dark">
-                    <a href="/Index" class="logo">
-                        <img src="@Url.Content("~/AdminAssets/img/kaiadmin/logo_light.svg")"
-                             alt="navbar brand"
-                             class="navbar-brand"
-                             height="20" />
-                    </a>
+                        <a title="" asp-page="/Index"><img style="width:85%;" src="~/AdminAssets//img//Logowhite.png" alt=""></a>
+                 
                     <div class="nav-toggle">
                         <button class="btn btn-toggle toggle-sidebar">
                             <i class="gg-menu-right"></i>
