--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
@@ -38,7 +38,7 @@
 	<meta name="keywords" content="" />
 	<title>@ViewData["Title"]</title>
 	<link rel="icon" href="~/images/fav.png" type="image/png" sizes="16x16">
-
+	<link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
 	<link rel="stylesheet" href="~/css/main.min.css">
 	<link rel="stylesheet" href="~/css/strip.css">
 	<link rel="stylesheet" href="~/css/style.css">
@@ -51,7 +51,7 @@
 	<header>
 		<div class="topbar">
 			<div class="logo">
-				<a title="" asp-page="/Index"><img src="@Url.Content("~/images/logo.png")" alt=""></a>
+				<a style="width:85%; margin-bottom:7%" title="" asp-page="/Index"><img src="~/images/Logoda.png" alt=""></a>
 			</div>
 
 			<div class="top-area">
@@ -303,8 +303,8 @@
 					<div class="widget">
 						<div class="foot-logo">
 							<div class="logo">
-								<a title="" href="/Index">
-									<img src="@Url.Content("~/images/logo.png")" alt="">
+								<a style="width:85%; margin-bottom:7%" title="" href="/Index">
+									<img src="~/images/Logoda.png" alt="">
 								</a>
 							</div>
 							<p>
