--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href=@Url.Content("~/MentorAssets/images/favicon.svg") type="image/x-icon" />
+    <link rel="shortcut icon" href="~/images//fav_icon.png" type="image/x-icon" />
 
     <!-- ========== All CSS files linkup ========= -->
     <link rel="stylesheet" href=@Url.Content("~/MentorAssets/css/bootstrap.min.css") />
@@ -23,9 +23,7 @@
     <!-- ======== sidebar-nav start =========== -->
     <aside class="sidebar-nav-wrapper">
         <div class="navbar-logo">
-            <a href="/Index">
-                <img src=@Url.Content("~/MentorAssets/images/logo/logo.svg") alt="logo" />
-            </a>
+            <a title="" asp-page="/Index"><img style="width:85%;" src="~/images/Logoda.png" alt=""></a>
         </div>
         <nav class="sidebar-nav">
             <ul>
