--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	<link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
 	<link rel="stylesheet" href="~/css/main.min.css">
 	<link rel="stylesheet" href="~/css/style.css">
 	<link rel="stylesheet" href="~/css/color.css">
@@ -63,7 +64,7 @@
     <header>
 		<div class="topbar">
 			<div class="logo">
-				<a title="" asp-page="/Index"><img src="images/logo.png" alt=""></a>
+				<a style="width:85%; margin-bottom:7%" title="" asp-page="/Index"><img src="images/Logoda.png" alt=""></a>
 			</div>
 
 			<div class="top-area">
@@ -256,7 +257,7 @@
 					</li>
 				</ul>
 				<div class="user-img">
-					<img src="images/resources/admin.jpg" alt="">
+					<img  src="images/resources/admin.jpg" alt="">
 					<span class="status f-online"></span>
 					<div class="user-setting">
 						<a href="#" title=""><span class="status f-online"></span>online</a>
@@ -278,10 +279,14 @@
 			<ul class="navbar-nav flex-grow-1">
 				@if (isAuthenticated)
 				{
-					<li style="padding-bottom: 4%;">
-						<i class="bi bi-person-vcard"></i>
-						<a asp-page="/MentorRegulations">Become a Mentor</a>
-					</li>
+
+					@if (!isMentor)
+					{
+						<li style="padding-bottom: 4%;">
+							<i class="bi bi-person-vcard"></i>
+							<a asp-page="/MentorRegulations">Become a Mentor</a>
+						</li>
+					}
 					<li>
 						<i style="font-size: 115%;" class="bi bi-box-arrow-in-left"></i>
 						<a asp-page="/Logout">Logout</a>
@@ -315,7 +320,7 @@
 					<div class="widget">
 						<div class="foot-logo">
 							<div class="logo">
-								<a title="" asp-page="/Index"><img src="images/logo.png" alt=""></a>
+								<a style="width:85%; margin-bottom:7%" title="" asp-page="/Index"><img src="images/Logoda.png" alt=""></a>
 							</div>
 							<p>
 								The trio took this simple idea and built it into the world’s leading carpooling platform.
