--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -61,8 +61,8 @@
 												<a href="#" title="">images</a>
 											</li>
 											<li>
-												<i class="ti-video-camera"></i>
-												<a href="#" title="">videos</a>
+												<i class="bi bi-book-half"></i>
+												<a href="/UserCourse" title="">My Own Course</a>
 											</li>
 											<li>
 												<i class="ti-bell"></i>
