--- a/final-project-fe/Pages/UserCourse.cshtml
+++ b/final-project-fe/Pages/UserCourse.cshtml
@@ -347,7 +347,14 @@
                                         <a asp-page="/GenerateCertificate"
                                            asp-route-userId="@Model.UserId"
                                            asp-route-courseId="@course.CourseId">
-                                             Get Certificate
+                                            Get Certificate
+                                        </a>
+                                        <br />
+
+                                        <a asp-page="/CreateReview"
+                                           asp-route-userId="@Model.UserId"
+                                           asp-route-courseId="@course.CourseId">
+                                            @actionText
                                         </a>
                                     }
                                     else
